# awx-api-demo-iac

./: .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
collections/ansible_collections/demo/api_demo/: README.md  galaxy.yml
collections/ansible_collections/demo/api_demo/playbooks/: api_echo_demo.yml
collections/ansible_collections/demo/api_demo/plugins/modules/: api_echo.py
ee/: execution-environment.yml
inventories/group_vars/all/: awx.example.yml  main.yml
playbooks/job_templates/: api_echo_demo.yml
playbooks/local/: awx_api_ping.yml  awx_rbac_preflight.yml  bootstrap_awx.yml  bootstrap_awx_api.yml  deploy_ee_and_patch_jt.yml  launch_demo_job.yml  test_collection_local.yml
scripts/: build_ee.sh  push_ee.sh
vars/: awx_resources.yml
